# mimir

./: .gitignore  CHANGELOG.md  CLAIMS-AUDIT.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FABLE5-HANDOFF.md  README.md  ROADMAP.md  SBOM.md  SECURITY.md  SUPPORT.md  awesome-mimir.md  build.rs  docker-compose.yml  glama.json  index.html  manifest.json  server.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: clawhub-publish.yml  docker.yml  integrations.yml  recall-gate.yml  test.yml
.hermes/plans/: discord-scout-impl.md
benchmark/: results.json  run.py
benchmark/longmemeval/: README.md  report.json  run.py
benchmark/recall/: README.md  dataset.json  gate.py  report.json  run.py
benchmark/temporal/: run.py
benchmarks/: LONG_MEM_EVAL.md
clawhub/skills/mimir/: SKILL.md
docs/: EXPORT-CONTROL.md  NIST-AI-RMF-ALIGNMENT.md  ROADMAP.md  SBOM.md  federal-buyers.md  retention.md  transport.md
docs/clients/: README.md
docs/integration/: claude-code.md  cursor.md  general-mcp.md
examples/: README.md  adk_integration.py  crewai_integration.py  quickstart.py
integrations/: .gitignore  README.md
integrations/autogen/: README.md  pyproject.toml
integrations/autogen/mimir_autogen/: __init__.py
integrations/autogen/tests/: test_mimir_memory.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/mimir_crewai/: __init__.py
integrations/crewai/mimir_crewai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/crewai/tests/: test_mimir_tool.py
integrations/langgraph/: README.md  pyproject.toml
integrations/langgraph/mimir_langgraph/: __init__.py
integrations/langgraph/mimir_langgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/langgraph/tests/: test_mimir_store.py
integrations/mimir-persist/: pyproject.toml
plugins/obsidian-mimir/: .gitignore  esbuild.config.mjs  main.ts  manifest.json  package.json
proto/mimir/v1/: mimir.proto
scripts/: bootstrap.sh  install.sh
src/: db.rs  embedding.rs  encryption.rs  extraction.rs  grpc.rs  main.rs  mcp.rs  models.rs  multimodal.rs  schema.rs  tools.rs  transport.rs  util.rs
src/connectors/: file_watcher.rs  github.rs  mod.rs
src/web/: dashboard.html  dashboard_html.rs  mod.rs
