[package]
name = "mimir"
version = "1.3.0"
edition = "2021"
description = "Persistent memory engine for AI agents — MCP JSON-RPC stdio server"
repository = "https://github.com/Perseus-Computing-LLC/mimir"
license = "MIT"

[[bin]]
name = "mimir"
path = "src/main.rs"

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
rust-stemmers = "1.2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
ureq = "2"
notify = "6"
serde_yaml = "0.9"
async-stream = "0.3"
futures = "0.3"

# Optional: bundled embedding model (all-MiniLM-L6-v2 via ONNX Runtime)
ort = { version = "2.0.0-rc.12", optional = true, features = ["download-binaries"] }
tokenizers = { version = "0.23", optional = true }
ndarray = { version = "0.16", optional = true }
tonic = { version = "0.13", optional = true, features = ["transport"] }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
tokio-stream = { version = "0.1", optional = true }

[features]
default = []
bundled-embeddings = ["ort", "tokenizers", "ndarray"]
grpc = ["tonic", "prost", "prost-types", "tonic-build"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
