[package]
name = "mimir"
version = "2.3.0"
edition = "2021"
description = "Persistent memory engine for AI agents — MCP JSON-RPC stdio server"
repository = "https://github.com/Perseus-Computing-LLC/mimir"
license = "MIT"

[[bin]]
name = "mimir"
path = "src/main.rs"

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
# Connection pool so HTTP/SSE requests can read concurrently under WAL instead of
# serializing on a single Mutex<Connection> (rusqlite Connection is !Sync). (#210)
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
rust-stemmers = "1.2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
ureq = "2"
notify = "6"
serde_yaml = "0.9"
async-stream = "0.3"
futures = "0.3"

# Optional: bundled embedding model (all-MiniLM-L6-v2 via ONNX Runtime)
ort = { version = "2.0.0-rc.12", optional = true, features = ["download-binaries"] }
# default-features=false drops tokenizers' `esaxx_fast` feature, which pulls in
# esaxx-rs — a C dep whose build.rs hardcodes `.static_crt(true)` (/MT). That
# clashes with ort's prebuilt /MD binaries on Windows MSVC (LNK2038/LNK1169) and
# fails to link. esaxx_fast only accelerates Unigram *training*; mimir only does
# inference (Tokenizer::from_file + encode), so dropping it is a no-op for us and
# lets bundled-embeddings link on Windows. Keep onig + progressbar (the other two
# defaults) so tokenizer behavior is otherwise unchanged. (#222)
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["onig", "progressbar"] }
ndarray = { version = "0.17", optional = true }  # MUST match the ndarray version ort rc.12 depends on, else our arrays are a different crate-version type and TensorArrayData (from_array_view) won't accept them (#212)
tonic = { version = "0.13", optional = true, features = ["transport"] }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Optional: local multimodal document text extraction (#236). DOCX via `zip` +
# in-tree XML text stripping; PDF via `pdf-extract`. Kept OUT of the default
# build so the lean single-binary / zero-dependency story is unchanged; enable
# with `--features multimodal`. All extraction is local (no cloud, no network).
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
pdf-extract = { version = "0.7", optional = true }

[features]
# bundled-embeddings is ON by default (#237): zero-config, zero-network dense /
# hybrid semantic search out of the box. The quantized all-MiniLM-L6-v2 model is
# fetched once by build.rs and compiled into the binary (no first-run download).
# Build a lean binary without it via `cargo build --no-default-features`.
default = ["bundled-embeddings"]
bundled-embeddings = ["ort", "tokenizers", "ndarray"]
grpc = ["tonic", "prost", "prost-types", "tonic-build"]
# Local document text extraction for mimir_ingest_file (DOCX/PDF). Opt-in.
multimodal = ["zip", "pdf-extract"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
# Used by build.rs to fetch the quantized embedding model into OUT_DIR at build
# time (only when the bundled-embeddings feature is active). Cached across builds.
ureq = "2"
