[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mimir-crewai"
version = "0.1.0"
description = "Mimir persistent memory tool for CrewAI agents"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.30.0",
]

[tool.setuptools]
py-modules = []
packages = ["mimir_crewai"]
package-dir = {"" = "."}
