[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mimir-langgraph"
version = "0.1.0"
description = "Mimir persistent memory backend for LangGraph agents"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
py-modules = []
packages = ["mimir_langgraph"]
package-dir = {"" = "."}
